[gd_scene load_steps=12 format=2]

[ext_resource path="res://tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://Sprites/backgrounds/negro.jpg" type="Texture" id=2]
[ext_resource path="res://Objects/camera/Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Sapo/SapoMafioso.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/boceto.jpg" type="Texture" id=5]
[ext_resource path="res://Objects/Box/box.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Level 1/toScene.gd" type="Script" id=7]
[ext_resource path="res://Objects/Mosca/MoscaEstatica/moscaEstatica.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/Mosca/MoscaMovimiento/MoscaMovimient.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 149.5, 76.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 165, 41 )

[node name="Node2D" type="Node2D"]
position = Vector2( 8, -4 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 424, 292 )
moveY = false

[node name="Escena" type="Node2D" parent="."]

[node name="Player" parent="Escena" instance=ExtResource( 4 )]
position = Vector2( 344, -140 )

[node name="Boceto" type="Sprite" parent="Escena"]
visible = false
position = Vector2( 661, -573 )
scale = Vector2( 4.28463, 4.28463 )
z_index = 1
texture = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="Escena"]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -196642, 8, 0, -196641, 8, 0, -196640, 3, 0, -196639, 5, 0, -196638, 1, 0, -196637, 3, 0, -196636, 6, 0, -196635, 5, 0, -196634, 6, 0, -196633, 3, 0, -196632, 4, 0, -196631, 6, 0, -196630, 1, 0, -196629, 4, 0, -196628, 4, 0, -196627, 5, 0, -196626, 4, 0, -196625, 3, 0, -196624, 2, 0, -196623, 4, 0, -196622, 2, 0, -196621, 4, 0, -196620, 5, 0, -196619, 4, 0, -196618, 1, 0, -196617, 3, 0, -196616, 2, 0, -196615, 5, 0, -196614, 4, 0, -196613, 4, 0, -196612, 2, 0, -196611, 6, 0, -196610, 2, 0, -196609, 1, 0, -262144, 6, 0, -262143, 4, 0, -262142, 3, 0, -262141, 4, 0, -262137, 2, 0, -262136, 4, 0, -262135, 1, 0, -262134, 4, 0, -262133, 3, 0, -262132, 2, 0, -262131, 6, 0, -262130, 4, 0, -262129, 3, 0, -262128, 6, 0, -262127, 5, 0, -262126, 6, 0, -262125, 1, 0, -262124, 4, 0, -262123, 3, 0, -262122, 4, 0, -262121, 4, 0, -262120, 5, 0, -262119, 6, 0, -262118, 1, 0, -262117, 3, 0, -262116, 1, 0, -262115, 3, 0, -262114, 4, 0, -262113, 4, 0, -262112, 5, 0, -262111, 2, 0, -262110, 4, 0, -262109, 3, 0, -262108, 4, 0, -262107, 1, 0, -262106, 6, 0, -262105, 1, 0, -262104, 4, 0, -262103, 3, 0, -262102, 4, 0, -262101, 6, 0, -262100, 5, 0, -262099, 2, 0, -262098, 4, 0, -262097, 1, 0, -262096, 4, 0, -262092, 2, 0, -262091, 4, 0, -262090, 3, 0, -262089, 4, 0, -262088, 8, 0, -262087, 8, 0, -131106, 8, 0, -131105, 8, 0, -131104, 5, 0, -131103, 6, 0, -131102, 3, 0, -131101, 6, 0, -131100, 1, 0, -131099, 5, 0, -131098, 6, 0, -131097, 1, 0, -131096, 4, 0, -131095, 5, 0, -131094, 6, 0, -131093, 3, 0, -131092, 6, 0, -131091, 1, 0, -131090, 1, 0, -131089, 6, 0, -131088, 5, 0, -131087, 2, 0, -131086, 6, 0, -131085, 4, 0, -131084, 3, 0, -131083, 4, 0, -131082, 6, 0, -131081, 1, 0, -131080, 2, 0, -131079, 6, 0, -131078, 1, 0, -131077, 3, 0, -131076, 4, 0, -131075, 1, 0, -131074, 5, 0, -131073, 4, 0, -196608, 1, 0, -196607, 2, 0, -196606, 2, 0, -196605, 4, 0, -196601, 3, 0, -196600, 4, 0, -196599, 6, 0, -196598, 6, 0, -196597, 1, 0, -196596, 5, 0, -196595, 4, 0, -196594, 3, 0, -196593, 1, 0, -196592, 2, 0, -196591, 2, 0, -196590, 2, 0, -196589, 6, 0, -196588, 3, 0, -196587, 4, 0, -196586, 3, 0, -196585, 3, 0, -196584, 2, 0, -196583, 1, 0, -196582, 6, 0, -196581, 3, 0, -196580, 2, 0, -196579, 3, 0, -196578, 4, 0, -196577, 1, 0, -196576, 6, 0, -196575, 6, 0, -196574, 3, 0, -196573, 4, 0, -196572, 2, 0, -196571, 5, 0, -196570, 4, 0, -196569, 1, 0, -196568, 6, 0, -196567, 3, 0, -196566, 4, 0, -196565, 4, 0, -196564, 2, 0, -196563, 2, 0, -196562, 1, 0, -196561, 6, 0, -196560, 6, 0, -196556, 4, 0, -196555, 5, 0, -196554, 4, 0, -196553, 2, 0, -196552, 8, 0, -196551, 8, 0, -65570, 8, 0, -65569, 8, 0, -131016, 8, 0, -131015, 8, 0, -34, 8, 0, -33, 8, 0, -65480, 8, 0, -65479, 8, 0, 65502, 8, 0, 65503, 8, 0, 56, 8, 0, 57, 8, 0, 131038, 8, 0, 131039, 8, 0, 65592, 8, 0, 65593, 8, 0, 196574, 8, 0, 196575, 8, 0, 131073, 4, 0, 131074, 5, 0, 131075, 6, 0, 131076, 3, 0, 131077, 6, 0, 131078, 4, 0, 131119, 5, 0, 131120, 3, 0, 131121, 2, 0, 131122, 2, 0, 131123, 3, 0, 131124, 4, 0, 131125, 5, 0, 131128, 8, 0, 131129, 8, 0, 262110, 8, 0, 262111, 8, 0, 196664, 8, 0, 196665, 8, 0, 327646, 8, 0, 327647, 8, 0, 262185, 2, 0, 262186, 4, 0, 262187, 5, 0, 262188, 5, 0, 262189, 2, 0, 262200, 8, 0, 262201, 8, 0, 393182, 8, 0, 393183, 8, 0, 327736, 8, 0, 327737, 8, 0, 458718, 8, 0, 458719, 8, 0, 393225, 8, 0, 393272, 8, 0, 393273, 8, 0, 524254, 8, 0, 524255, 8, 0, 458760, 8, 0, 458761, 8, 0, 458789, 1, 0, 458790, 1, 0, 458791, 1, 0, 458808, 8, 0, 458809, 8, 0, 589790, 8, 0, 589791, 8, 0, 524296, 8, 0, 524297, 8, 0, 524344, 8, 0, 524345, 8, 0, 655326, 8, 0, 655327, 8, 0, 589832, 8, 0, 589833, 8, 0, 589835, 8, 0, 589880, 8, 0, 589881, 8, 0, 720862, 8, 0, 720863, 8, 0, 655367, 8, 0, 655368, 8, 0, 655369, 8, 0, 655370, 8, 0, 655371, 8, 0, 655416, 8, 0, 655417, 8, 0, 786398, 8, 0, 786399, 8, 0, 786400, 1, 0, 786401, 1, 0, 786402, 2, 0, 786403, 3, 0, 786404, 4, 0, 786405, 3, 0, 786406, 1, 0, 786407, 3, 0, 786408, 5, 0, 786409, 3, 0, 786410, 5, 0, 786411, 4, 0, 786412, 5, 0, 786413, 3, 0, 786414, 6, 0, 786415, 1, 0, 786416, 2, 0, 786417, 2, 0, 786418, 6, 0, 786419, 3, 0, 786420, 3, 0, 786421, 5, 0, 786422, 1, 0, 786423, 2, 0, 786427, 4, 0, 786428, 4, 0, 786429, 1, 0, 786430, 5, 0, 786431, 2, 0, 720896, 4, 0, 720897, 1, 0, 720898, 2, 0, 720899, 3, 0, 720900, 6, 0, 720901, 6, 0, 720902, 1, 0, 720903, 5, 0, 720904, 3, 0, 720905, 6, 0, 720906, 1, 0, 720907, 4, 0, 720908, 2, 0, 720909, 1, 0, 720910, 2, 0, 720911, 2, 0, 720912, 3, 0, 720913, 5, 0, 720914, 5, 0, 720915, 2, 0, 720916, 1, 0, 720917, 4, 0, 720918, 2, 0, 720919, 4, 0, 720920, 2, 0, 720921, 6, 0, 720922, 6, 0, 720923, 1, 0, 720924, 3, 0, 720925, 5, 0, 720926, 1, 0, 720927, 4, 0, 720928, 6, 0, 720929, 3, 0, 720933, 1, 0, 720934, 5, 0, 720935, 3, 0, 720936, 4, 0, 720937, 2, 0, 720938, 2, 0, 720939, 6, 0, 720940, 3, 0, 720941, 5, 0, 720942, 1, 0, 720943, 2, 0, 720944, 4, 0, 720945, 5, 0, 720946, 1, 0, 720947, 2, 0, 720948, 4, 0, 720949, 1, 0, 720950, 2, 0, 720951, 1, 0, 720952, 8, 0, 720953, 8, 0, 851934, 8, 0, 851935, 8, 0, 851936, 6, 0, 851937, 6, 0, 851938, 4, 0, 851939, 4, 0, 851940, 6, 0, 851941, 5, 0, 851942, 4, 0, 851943, 4, 0, 851944, 6, 0, 851945, 4, 0, 851946, 4, 0, 851947, 6, 0, 851948, 3, 0, 851949, 4, 0, 851950, 5, 0, 851951, 6, 0, 851952, 6, 0, 851953, 5, 0, 851954, 5, 0, 851955, 6, 0, 851956, 4, 0, 851957, 3, 0, 851958, 6, 0, 851959, 6, 0, 851963, 6, 0, 851964, 4, 0, 851965, 5, 0, 851966, 3, 0, 851967, 6, 0, 786432, 5, 0, 786433, 5, 0, 786434, 4, 0, 786435, 3, 0, 786436, 4, 0, 786437, 3, 0, 786438, 5, 0, 786439, 3, 0, 786440, 5, 0, 786441, 5, 0, 786442, 4, 0, 786443, 3, 0, 786444, 6, 0, 786445, 4, 0, 786446, 6, 0, 786447, 4, 0, 786448, 3, 0, 786449, 5, 0, 786450, 3, 0, 786451, 6, 0, 786452, 4, 0, 786453, 6, 0, 786454, 5, 0, 786455, 3, 0, 786456, 6, 0, 786457, 5, 0, 786458, 4, 0, 786459, 3, 0, 786460, 6, 0, 786461, 3, 0, 786462, 3, 0, 786463, 3, 0, 786464, 4, 0, 786465, 3, 0, 786469, 3, 0, 786470, 6, 0, 786471, 3, 0, 786472, 5, 0, 786473, 5, 0, 786474, 3, 0, 786475, 6, 0, 786476, 3, 0, 786477, 4, 0, 786478, 3, 0, 786479, 5, 0, 786480, 6, 0, 786481, 3, 0, 786482, 6, 0, 786483, 5, 0, 786484, 5, 0, 786485, 6, 0, 786486, 4, 0, 786487, 5, 0, 786488, 8, 0, 786489, 8, 0 )

[node name="Negro" type="Sprite" parent="Escena"]
position = Vector2( 866.5, 312 )
scale = Vector2( 5.32131, 2.32468 )
z_index = -1
texture = ExtResource( 2 )

[node name="Cajas" type="Node2D" parent="Escena"]
position = Vector2( 72, -4 )

[node name="Node2D" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1636, 656 )

[node name="Node2D2" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1552, 656 )

[node name="Node2D3" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1636, 576 )

[node name="KinematicBody2D" parent="Escena/Cajas/Node2D3" index="0"]
mosca = true

[node name="Node2D4" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1552, 576 )

[node name="KinematicBody2D" parent="Escena/Cajas/Node2D4" index="0"]
mosca = true

[node name="Node2D5" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1448, 656 )

[node name="Node2D6" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1364, 656 )

[node name="Node2D7" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1448, 576 )

[node name="Node2D8" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1364, 576 )

[node name="Node2D9" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1552, 488 )

[node name="Node2D10" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1472, 488 )

[node name="Node2D12" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1472, 400 )

[node name="Node2D13" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1472, 312 )

[node name="KinematicBody2D" parent="Escena/Cajas/Node2D13" index="0"]
mosca = true

[node name="Node2D14" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1472, 224 )

[node name="Node2D15" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1472, 136 )

[node name="Node2D11" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( -1388, 488 )

[node name="Node2D16" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( 1448, 656 )

[node name="Node2D17" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( 1424, 568 )

[node name="Node2D18" parent="Escena/Cajas" instance=ExtResource( 6 )]
position = Vector2( 1368, 656 )

[node name="KinematicBody2D" parent="Escena/Cajas/Node2D18" index="0"]
mosca = true

[node name="Moscas" type="Node2D" parent="Escena"]

[node name="KinematicBody2D" parent="Escena/Moscas" instance=ExtResource( 8 )]
position = Vector2( -1824, 604 )

[node name="Node2D" parent="Escena/Moscas" instance=ExtResource( 9 )]
position = Vector2( -936, 580 )

[node name="Character" parent="Escena/Moscas/Node2D" index="0"]
direction = true

[node name="Area2D3" parent="Escena/Moscas/Node2D" index="1"]
position = Vector2( -264, 0 )

[node name="Area2D4" parent="Escena/Moscas/Node2D" index="2"]
position = Vector2( 384, 0 )

[node name="Node2D2" parent="Escena/Moscas" instance=ExtResource( 9 )]
position = Vector2( 2664, 580 )

[node name="Character" parent="Escena/Moscas/Node2D2" index="0"]
direction = true

[node name="Area2D3" parent="Escena/Moscas/Node2D2" index="1"]
position = Vector2( -264, 0 )

[node name="Area2D4" parent="Escena/Moscas/Node2D2" index="2"]
position = Vector2( 872, 0 )

[node name="toLevel" type="Node2D" parent="."]

[node name="to1_3" type="Area2D" parent="toLevel"]
position = Vector2( -544, 868 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="toLevel/to1_3"]
position = Vector2( 139.5, 66.5 )
shape = SubResource( 1 )

[node name="to1_4" type="Area2D" parent="toLevel"]
position = Vector2( 2136, 868 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="toLevel/to1_4"]
position = Vector2( 139.5, 66.5 )
shape = SubResource( 1 )

[node name="to1_1" type="Area2D" parent="toLevel"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="toLevel/to1_1"]
position = Vector2( 339, -317 )
shape = SubResource( 2 )

[connection signal="body_entered" from="toLevel/to1_3" to="toLevel/to1_3" method="_on_to1_3_body_entered"]
[connection signal="body_entered" from="toLevel/to1_4" to="toLevel/to1_4" method="_on_to1_4_body_entered"]
[connection signal="body_entered" from="toLevel/to1_1" to="toLevel/to1_1" method="_on_to1_1_body_entered"]

[editable path="Camera2D"]
[editable path="Escena/Cajas/Node2D3"]
[editable path="Escena/Cajas/Node2D4"]
[editable path="Escena/Cajas/Node2D13"]
[editable path="Escena/Cajas/Node2D18"]
[editable path="Escena/Moscas/Node2D"]
[editable path="Escena/Moscas/Node2D2"]
